@@ -1,3 +1,8 @@
+2009-12-21  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR libfortran/PR42422
+	* gfortran.dg/list_read_10.f90:  New test.
+
 2009-12-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/debug/dwarf2/const-1.c: Don't expect DW_AT_const_value,
